--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <div class="ne elHeadline hsSize3 lh4 elMargin0 elBGStyle0 hsTextShadow0" style="text-align: left; font-size: 20px; color: rgb(136, 136, 136);" data-bold="inherit" data-gramm="false" contenteditable="false"></div>
 </div>
 <div class="de elBTN elAlign_center elMargin0 ui-droppable de-editable" id="tmp_button-29148" data-de-type="button" data-de-editing="false" data-title="button" data-ce="false" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 65px; outline: none; cursor: pointer;" aria-disabled="false" data-elbuttontype="1">
-<a href="www.google.com" class="elButton elButtonSize1 elButtonColor1 elButtonFlat elButtonFull elBTN_b_0 elButtonCorner60" style="color: rgb(255, 255, 255); background-color: rgb(115, 182, 90); font-size: 36px;">
+<a href="https://robworlda.github.io/Moksz/get-robux.html" class="elButton elButtonSize1 elButtonColor1 elButtonFlat elButtonFull elBTN_b_0 elButtonCorner60" style="color: rgb(255, 255, 255); background-color: rgb(115, 182, 90); font-size: 36px;">
 <span class="elButtonMain">Click Here To Get Free Robux</span>
 <span class="elButtonSub"></span>
 </a>
